--- a/hasslefieds_rails/Gemfile
+++ b/hasslefieds_rails/Gemfile
@@ -29,8 +29,10 @@ gem 'dotenv-rails', :groups => [:development, :test]
 
 gem 'aws-sdk', '< 2.0'
 
+gem 'rack-cors', :require => 'rack/cors'
+
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+ gem 'bcrypt', '~> 3.1.7'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
